k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-app
  labels:
    app.kubernetes.io/name: cloud-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloud-app
  ports:
    - name: http
      port: 8080
      targetPort: http
